--- a/src/svelte/index.html
+++ b/src/svelte/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
+               script-src 'self' 'unsafe-eval'; 
+               style-src 'self' 'unsafe-inline';
+               img-src 'self' data: http://www.w3.org/2000/svg https://www.w3.org/2000/svg;">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
     <title>Senda</title>
 </head>
