--- a/src/svelte/index.html
+++ b/src/svelte/index.html
@@ -12,7 +12,7 @@
     <title>Senda</title>
 </head>
 
-<body class="theme-light">
+<body class="theme-dark">
     <div id="app" style="width: 100%;"></div>
     <script type="module" src="main.ts"></script>
 </body>
