--- a/src/svelte/index.html
+++ b/src/svelte/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en" data-theme="cosmical">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
+<!doctype html>
+<html lang="en" data-theme="light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; 
                script-src 'self' 'unsafe-eval'; 
                style-src 'self' 'unsafe-inline';
-               img-src 'self' data: http://www.w3.org/2000/svg https://www.w3.org/2000/svg;">
+               img-src 'self' data: http://www.w3.org/2000/svg https://www.w3.org/2000/svg;"
+    />
     <title>Senda</title>
-</head>
+  </head>
 
-<body class="theme-dark" data-theme="cerberus">
-    <div id="app" style="width: 100%;"></div>
+  <body class="theme-dark" data-theme="cosmical">
+    <div id="app" style="width: 100%"></div>
     <script type="module" src="main.ts"></script>
-</body>
-
+  </body>
 </html>
