--- a/src/svelte/index.html
+++ b/src/svelte/index.html
@@ -13,7 +13,7 @@
     <title>Senda</title>
   </head>
 
-  <body class="theme-dark text-base-content bg-base-100">
+  <body>
     <div id="app" style="width: 100%"></div>
     <script type="module" src="main.ts"></script>
   </body>
