--- a/src/svelte/index.html
+++ b/src/svelte/index.html
@@ -15,6 +15,11 @@
       <title>Senda</title>
       <link rel="stylesheet" href="./css/app.css" />
    </head>
+   <style>
+      body {
+         background: #121212;
+      }
+   </style>
 
    <body>
       <div id="app" style="width: 100%"></div>
